Bugfix avatar example destination mesh geometry

--- a/examples/avatar_ml.html
+++ b/examples/avatar_ml.html
@@ -161,7 +161,7 @@
       scene.add(rayMesh);
 
       destinationMesh = (() => {
-        const geometry = cubeGeometry;
+        const geometry = smallCubeGeometry;
         const material = new THREE.MeshPhongMaterial({
           color: 0x2196f3,
         });
