--- a/examples/graffiti_ml.html
+++ b/examples/graffiti_ml.html
@@ -24,10 +24,9 @@ const localVector3 = new THREE.Vector3();
 const localVector4 = new THREE.Vector3();
 const localVector5 = new THREE.Vector3();
 const localQuaternion = new THREE.Quaternion();
-const localEuler = new THREE.Euler();
 const localMatrix = new THREE.Matrix4();
-const localRay = new THREE.Ray();
-const localPlane = new THREE.Plane();
+const localVectorFloat32Array = new Float32Array(3);
+const localVectorFloat32Array2 = new Float32Array(3);
 
 const _requestImage = src => new Promise((accept, reject) => {
   const img = new Image();
