--- a/examples/graffiti_ml.html
+++ b/examples/graffiti_ml.html
@@ -36,6 +36,8 @@ const _requestImage = src => new Promise((accept, reject) => {
   };
 });
 
+const _getControllerIndex = inputSource => inputSource.handedness === 'left' ? 0 : 1;
+
 const controllerGeometry = new THREE.BoxBufferGeometry(0.05, 0.01, 0.1);
 const controllerMaterial = new THREE.MeshPhongMaterial({
   color: 0x4caf50,
@@ -396,14 +398,15 @@ function animate(time, frame) {
     for (let i = 0; i < inputSources.length; i++) {
       const inputSource = inputSources[i];
       const pose = frame.getInputPose(inputSource);
+      const controllerIndex = _getControllerIndex(inputSource);
 
-      const controllerMesh = controllerMeshes[i];
+      const controllerMesh = controllerMeshes[controllerIndex];
       controllerMesh.matrix.fromArray(pose.targetRay.transformMatrix);
       controllerMesh.matrix.decompose(controllerMesh.position, controllerMesh.quaternion, controllerMesh.scale);
       // controllerMesh.updateMatrixWorld(true);
 
-      if (!controllerHitTesting[i]) {
-        const hitMesh = hitMeshes[i];
+      if (!controllerHitTesting[controllerIndex]) {
+        const hitMesh = hitMeshes[controllerIndex];
 
         display.session.requestHitTest(
           controllerMesh.position
@@ -423,10 +426,10 @@ function animate(time, frame) {
               hitMesh.visible = false;
             }
 
-            controllerHitTesting[i] = false;
+            controllerHitTesting[controllerIndex] = false;
           });
 
-        controllerHitTesting[i] = true;
+        controllerHitTesting[controllerIndex] = true;
       }
     }
 
@@ -480,15 +483,14 @@ init();
   });
   display.session = session;
 
-  const _getControllerIndex = e => e.inputSource.handedness === 'left' ? 0 : 1;
   session.onselectstart = e => {
     if (!paintMesh) {
       paintMesh = _getPaintMesh();
-      paintControllerIndex = _getControllerIndex(e);
+      paintControllerIndex = _getControllerIndex(e.inputSource);
     }
   };
   session.onselectend = e => {
-    if (paintControllerIndex === _getControllerIndex(e)) {
+    if (paintControllerIndex === _getControllerIndex(e.inputSource)) {
       paintMesh = null;
       paintControllerIndex = -1;
     }
