Buigfix paint example duplicate scene declaration

--- a/examples/paint_ml.html
+++ b/examples/paint_ml.html
@@ -11,7 +11,7 @@
 <script>
 (() => {
 
-let container, scene, scene, camera, display, controllerMeshes;
+let container, scene, camera, display, controllerMeshes;
 let mesher = null;
 
 const MAX_NUM_POINTS = 1024;
