Small paint example syntax fix

--- a/examples/paint_ml.html
+++ b/examples/paint_ml.html
@@ -359,7 +359,7 @@ function animate(time, frame) {
           localVector2.set(0, 0, -(0.05 / 2) - (0.03 / 2) - (0.1 / 2))
             .applyQuaternion(hitMesh.quaternion)
       );
-      paintMesh.update(localVector.clone(), localQuaternion););
+      paintMesh.update(localVector.clone(), localQuaternion);
     }
 
     const gamepads = navigator.getGamepads();
