More paint example typo debugging

--- a/examples/paint_ml.html
+++ b/examples/paint_ml.html
@@ -270,7 +270,7 @@ const _makePaintMesh = meshId => {
 
         geometry.setDrawRange(0, lastPoint * 2);
 
-        if (!lastPositon) {
+        if (!lastPosition) {
           lastPosition = new THREE.Vector3();
         }
         lastPosition.copy(position);
