--- a/examples/sword_ml.html
+++ b/examples/sword_ml.html
@@ -11,7 +11,7 @@
   <script src="sprite3d.js"></script>
   <script>
     let container, scene, camera, renderer, display;
-    let swordMesh;
+    let swordMesh, particles;
 
     const localVector = new THREE.Vector3();
     const localVector2 = new THREE.Vector3();
@@ -27,6 +27,7 @@
       _makeButtons(),
     ];
     let grabbedIndex = -1;
+    let hitTesting = false;
 
     const _requestSpriteMesh = url => new Promise((accept, reject) => {
       const img = new Image();
@@ -40,6 +41,35 @@
         reject(err);
       };
     });
+
+    const particleGeometry = new THREE.BoxBufferGeometry(0.005, 0.005, 0.005);
+    const particleMaterial = new THREE.MeshPhongMaterial({
+      color: 0xff5722,
+      flatShading: true,
+    });
+    const _makeParticle = () => {
+      const mesh = new THREE.Mesh(particleGeometry, particleMaterial);
+      mesh.matrixAutoUpdate = false;
+      mesh.frustumCulled = false;
+      mesh.endTime = Date.now() + 1000 + Math.floor(Math.random() * 2000);
+      return mesh;
+    };
+    const _makeParticles = (position, rotation) => {
+      const numParticles = 10 + Math.floor(Math.random() * 20);
+      for (let j = 0; j < numParticles; j++) {
+        const particle = _makeParticle();
+        particle.position.copy(position);
+        particle.quaternion.copy(rotation);
+        // particle.updateMatrixWorld(true);
+        particle.velocity = new THREE.Vector3(
+          (Math.random() - 0.5) * 0.01,
+          (Math.random() - 0.5) * 0.02,
+          (Math.random() - 0.5) * 0.01
+        );
+        scene.add(particle);
+        particles.push(particle);
+      }
+    };
 
     function init() {
       container = document.createElement('div');
@@ -63,7 +93,6 @@
       scene.add(directionalLight);
 
       swordMesh = new THREE.Object3D();
-
       _requestSpriteMesh('sword.png')
         .then(newSwordMesh => {
           newSwordMesh.position.set(0.05, 0.11, -0.15);
@@ -85,6 +114,7 @@
           console.warn(err.stack);
         });
 
+      particles = [];
 
       renderer = new THREE.WebGLRenderer({
         antialias: true,
@@ -136,9 +166,61 @@
             swordMesh.updateMatrixWorld(true);
           }
         };
+        const _updateHitTest = () => {
+          if (!hitTesting) {
+            const startPosition = swordMesh.position.clone();
+
+            display.session.requestHitTest(
+              swordMesh.position
+                .toArray(localVectorFloat32Array),
+              localVector.set(0, 0, -1)
+                .applyQuaternion(swordMesh.quaternion)
+                .toArray(localVectorFloat32Array2)
+            )
+              .then(result => {
+                if (result.length) {
+                  const [{hitMatrix}] = result;
+                  localMatrix
+                    .fromArray(hitMatrix)
+                    .decompose(localVector, localQuaterion, localVector2);
+
+                  if (localVector.distanceTo(startPosition) < 1) {
+                    console.log('got hit', localVector.toArray().join(','), localQuaterion.toArray().join(','));
+                    _makeParticles(localVector, localQuaterion);
+                  }
+                }
+
+                hitTesting = false;
+              });
+
+            hitTesting = true;
+          }
+        };
+        const _updateParticles = () => {
+          const localParticles = particles.slice();
+          for (let i = 0; i < localParticles.length; i++) {
+            const particle = localParticles[i];
+            if (now < particle.endTime) {
+              particle.velocity.add(
+                localVector
+                  .set(0, -9.8, 0)
+                  .multiplyScalar(timeDiff / 1000 * 0.002)
+              );
+              particle.matrix.decompose(particle.position, particle.quaternion, particle.scale);
+              particle.position.add(particle.velocity);
+              particle.matrix.compose(particle.position, particle.quaternion, particle.scale);
+              particle.updateMatrixWorld(true);
+            } else {
+              scene.remove(particle);
+              particles.splice(particles.indexOf(particle), 1);
+            }
+          }
+        };
 
         _updateGamepads();
         _updateGrab();
+        _updateHitTest();
+        _updateParticles();
       }
 
       renderer.render(scene, renderer.vr.enabled ? renderer.vr.getCamera(camera) : camera);
