Add sword example missing declarations

--- a/examples/sword_ml.html
+++ b/examples/sword_ml.html
@@ -17,6 +17,8 @@
     const localVector2 = new THREE.Vector3();
     const localQuaternion = new THREE.Quaternion();
     const localMatrix = new THREE.Matrix4();
+    const localVectorFloat32Array = new Float32Array(3);
+    const localVectorFloat32Array2 = new Float32Array(3);
 
     const _makeButtons = () => ({
       trigger: false,
