--- a/examples/sword_ml.html
+++ b/examples/sword_ml.html
@@ -186,6 +186,7 @@
                     .fromArray(hitMatrix)
                     .decompose(localVector, localQuaterion, localVector2);
 
+                  console.log('check distance', localVector.distanceTo(startPosition));
                   if (localVector.distanceTo(startPosition) < 1) {
                     console.log('got hit', localVector.toArray().join(','), localQuaterion.toArray().join(','));
                     _makeParticles(localVector, localQuaterion);
