Sword example typo debugging

--- a/examples/sword_ml.html
+++ b/examples/sword_ml.html
@@ -184,12 +184,12 @@
                   const [{hitMatrix}] = result;
                   localMatrix
                     .fromArray(hitMatrix)
-                    .decompose(localVector, localQuaterion, localVector2);
+                    .decompose(localVector, localQuaternion, localVector2);
 
                   console.log('check distance', localVector.distanceTo(startPosition));
                   if (localVector.distanceTo(startPosition) < 1) {
-                    console.log('got hit', localVector.toArray().join(','), localQuaterion.toArray().join(','));
-                    _makeParticles(localVector, localQuaterion);
+                    console.log('got hit', localVector.toArray().join(','), localQuaternion.toArray().join(','));
+                    _makeParticles(localVector, localQuaternion);
                   }
                 }
 
