Sword example particles rendering fixing

--- a/examples/sword_ml.html
+++ b/examples/sword_ml.html
@@ -62,7 +62,7 @@
         const particle = _makeParticle();
         particle.position.copy(position);
         particle.quaternion.copy(rotation);
-        // particle.updateMatrixWorld(true);
+        particle.updateMatrixWorld();
         particle.velocity = new THREE.Vector3(
           (Math.random() - 0.5) * 0.01,
           (Math.random() - 0.5) * 0.02,
@@ -218,7 +218,7 @@
                 particle.matrix.decompose(particle.position, particle.quaternion, particle.scale);
                 particle.position.add(particle.velocity);
                 particle.matrix.compose(particle.position, particle.quaternion, particle.scale);
-                particle.updateMatrixWorld(true);
+                particle.updateMatrixWorld();
               } else {
                 scene.remove(particle);
                 particles.splice(particles.indexOf(particle), 1);
