Add bow example missing declarations

--- a/examples/bow_ml.html
+++ b/examples/bow_ml.html
@@ -54,7 +54,9 @@
     const localVector4 = new THREE.Vector3();
     const localQuaternion = new THREE.Quaternion();
     const localMatrix = new THREE.Matrix4();
-    const localRay = new THREE.Ray();
+    // const localRay = new THREE.Ray();
+    const localVectorFloat32Array = new Float32Array(3);
+    const localVectorFloat32Array2 = new Float32Array(3);
 
     const zeroVector = new THREE.Vector3();
     const oneVector = new THREE.Vector3(1, 1, 1);
